Fixed layout issues on some devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,7 +226,8 @@ footer {
 
   main {
     grid-template-areas: "img img" "text btns";
-    height: 80vh;
+    height: max-content;
+    grid-template-rows: max-content;
   }
 
   img {
