--- a/assets/scss/_tablet.scss
+++ b/assets/scss/_tablet.scss
@@ -12,7 +12,8 @@
   main {
     grid-template-areas: 'img img'
                           'text btns';
-    height: 80vh;
+    height: max-content;
+    grid-template-rows: max-content;
   }
 
   img {
